# Stonks

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: keep_alive.yaml
stonks/: app.py  auth.py  config.py  dashboard.py  mail.py  main.py  models.py  stock.py  wsgi.py
stonks/docs/: conf.py  index.rst
stonks/docs/_build/doctrees/: environment.pickle  index.doctree
stonks/docs/_build/doctrees/source/: app.doctree  auth.doctree  dashboard.doctree  modules.doctree  stock.doctree
stonks/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
stonks/docs/_build/html/_modules/: app.html  dashboard.html  index.html
stonks/docs/_build/html/_modules/stonks/: dashboard.html
stonks/docs/_build/html/_modules/stonks/stocks/: stock.html
stonks/docs/_build/html/source/: app.html  auth.html  dashboard.html  modules.html  stock.html
stonks/docs/source/: auth.rst  dashboard.rst  stock.rst
stonks/helper/: config.py  extensions.py  mail.py
stonks/stocks/: stock.py
stonks/user/: auth.py  forms.py  models.py
templates/: base.html  homepage.html
templates/auth/: forgot_password.html  login.html  otp_verify.html  profile.html  reset_password.html  signup.html  verify_password.html
templates/errors/: 404.html  429.html  500.html
templates/stock/: stock_details.html  watchlist.html
