[project]
name = "stonks"
version = "0.1.0"
description = "A Flask-based web application that allow users to manage a personalized stock watchlist."
authors = [
    {name = "Burak Demirkaya",email = "buraqdmrky@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "greenlet (>=3.1.1,<4.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "wtforms[email] (>=3.2.1,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-mail (>=0.10.0,<0.11.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "flask-caching (>=2.3.0,<3.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "yfinance (>=0.2.52,<0.3.0)",
    "yahooquery (>=2.3.7,<3.0.0)",
    "flask-apscheduler (>=1.13.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "cloudinary (>=1.42.2,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "flask-limiter (>=3.10.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
